[package]
name = "zbus"
version = "0.1.0"
authors = ["LeeSmet <lee.smet@hotmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
uuid = { version = "0.7", features = ["v4"] }
rmp-serde = "0.13"
serde = { version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
redis-async = "0.4"
futures = "0.1"
